# nbindgen

./: .travis.yml  CHANGES  Cargo.toml  README.md  build.rs  docs.md  template.toml
src/: main.rs
src/bindgen/: bindings.rs  builder.rs  config.rs  library.rs  mod.rs  writer.rs
src/bindgen/ir/: cfg.rs  constant.rs  documentation.rs  enumeration.rs  function.rs  generic_path.rs  global.rs  item.rs  opaque.rs  structure.rs  ty.rs  typedef.rs  union.rs
tests/: tests.rs
tests/expectations/: alias.nim  annotation.nim  array.nim  asserted_cast.nim  assoc_constant.nim  associated_in_body.nim  bitflags.nim  body.nim  cdecl  cdecl.nim  cfg.nim  cfg_2.nim  char.nim  constant.nim  custom_header.nim  dep_v2.nim  derive_eq.nim  destructor_and_copy_ctor.nim  display_list.nim  docstyle_auto.nim  docstyle_c99.nim  docstyle_doxy.nim  documentation.nim  enum.nim  euclid.nim  export_name.nim  extern.nim  extern_2.nim  external_workspace_child.nim  fns.nim  include_item.nim  inner_mod.nim  item_types.nim  item_types_renamed.nim  layout.nim  layout_aligned_opaque.nim  layout_packed_opaque.nim  lifetime_arg.nim  mod_attr.nim  mod_path.nim  (+25 more)
tests/rust/: body.toml  constant.rs  custom_header.toml
