[package]
name = "nbindgen"
version = "0.0.1"
authors = ["Jacek Sieka <arnetheduck@gmail.com>",
           "Jeff Muizelaar <jmuizelaar@mozilla.com>",
           "Kartikaya Gupta <kats@mozilla.com>",
           "Ryan Hunt <rhunt@eqrion.net>"]
license = "MPL-2.0"
description = "A tool for generating Nim bindings to Rust code (based on cbindgen)."
keywords = ["bindings", "ffi", "code-generation", "nim"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
repository = "https://github.com/arnetheduck/nbindgen/"
edition = "2018"

[badges]
travis-ci = { repository = "arnetheduck/nbindgen" }

[dependencies]
clap = { version = "2", optional = true }
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"]}
serde_json = "1.0"
tempfile = "3.0"
toml = "0.5"
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "1"
default-features = false
features = ["clone-impls", "extra-traits", "full", "parsing", "printing"]

[features]
default =  ["clap"]

[[bin]]
name = "nbindgen"
path = "src/main.rs"
doc = false
required-features = ["clap"]

[lib]
name = "nbindgen"
path = "src/lib.rs"
